--- a/MultiCampus/라떼판다.md
+++ b/MultiCampus/라떼판다.md
@@ -8,3 +8,12 @@
 
 실제회사에서는 다양한 서버를 쓰는데, 보안적으로 막기가 힘들 기 때문에 소프트웨어적으로 프록시서버를 하나 둔다. (엔진엑스)
 
+
+
+# Serial통신
+
+## 데이터 읽기
+
+1. 쓰레드를 이용해서 작업
+2. Event Handler를 이용해서 작업
+
