final project scenario

--- a/MultiCampus/PROJECT/MIRI_PROJECT/시나리오.md
+++ b/MultiCampus/PROJECT/MIRI_PROJECT/시나리오.md
@@ -63,7 +63,7 @@
    * Node.js 실시간 스트리밍 서버를 통해 안드로이드와 웹 사이트로 전송해 실시간 모니터링
    * 집안 전체를 감시하기 위해 출입문과 대각선에 있는 천장 구석 높은곳에 설치
 
-   * CCTV 동작 알림 메시지는 Android Immortal Service(안드로이드 죽지않는 서비스)를 적용하여 앱이 닫혀도 백그라운드에서 작동이 된다. 
+   * CCTV 동작 알림, 불꽃 감지, 가스 센서 메시지는 Android Immortal Service(안드로이드 죽지않는 서비스)를 적용하여 앱이 닫혀도 백그라운드에서 작동이 된다. 
 
 ## 3. WEB
 
@@ -74,3 +74,6 @@
 - 환우형 통계/분석/예측 페이지
 - 차량 사용자가 음성 명령 시 가장 많이 사용한 단어를 wordcount 사진으로 표현
 - 차량에 대한 내 위치를 표현
+
+## 4. 
+
